objects/ScCollection_Paragraph_Config__c.object
<CustomObject>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Letter_Template__c</fullName>
        <label>Letter Template</label>
        <referenceTo>ScCollection_Letter_Template__c</referenceTo>
        <relationshipLabel>Letter Paragraphs</relationshipLabel>
        <relationshipName>Template_Paragraphs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScCollection_Paragraph_Id__c</fullName>
        <label>Paragraph Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Paragraph__c</fullName>
        <label>Paragraph</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Letter Paragraph Configuration</label>
    <nameField>
        <displayFormat>TPS-{0000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letter Paragraph Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>